--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ma page de test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
   </head>
   <body>
-    <img src="images/firefox-icon.png" alt="Mon image de test">
+    <h1>Hello, world!</h1>
   </body>
 </html>
